Fix home link padding to align with title

--- a/src/routes/patient/PatientHomepage/PatientHomepageDesktop.css
+++ b/src/routes/patient/PatientHomepage/PatientHomepageDesktop.css
@@ -17,7 +17,7 @@
 }
 
 .patientHomeLink {
-    padding: 30px 0;
+    padding: 30px 5px;
     text-decoration: none;
 }
 
